--- a/src/main/resources/templates/album.html
+++ b/src/main/resources/templates/album.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-<div th:each="album : ${albums}">
-    <h3 th:text="${album.getTitle()}">albums</h3>
+<div th:each="album : ${albums}" class="albums">
+    <li>
+        <h2 th:text="${album.getTitle()}">album</h2>
+        <h3 th:text="${album.getArtist()}">artist</h3>
+        <img th:src="${album.getimageUrl()}"
+             height="100">
+        <li th:text="${album.getSongCount()}">soung count</li>
+        <li th:text="${album.getlength()}">length</li>
+    </li>
 </div>
 
 </body>
